# claude-code-small

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/: settings.json
.claude/agents/: coder.md  explorer.md  quick-coder.md  quick-reviewer.md  refiner.md  researcher.md  reviewer.md  troubleshooter.md  verifier.md
.claude/commands/: add-claude-agent.md  add-command.md  add-copilot-agent.md  add-skill.md  plan.md  req.md  review.md  spec.md  tdd.md
.claude/commands/flow/: code.md  explore.md  plan.md  refine.md  reqs.md  research.md  review.md  spec.md  troubleshoot.md  verify.md
.claude/commands/quick/: code.md  review.md
.claude/rules/: markdown.md  python.md  xml-tags.md
.claude/scripts/: run_python_hook.ps1  run_python_hook.sh
.claude/scripts/formatters/: .pymarkdown.json  format_markdown.py  format_python.py
.claude/scripts/recorder/: __init__.py  history_recorder.py  history_records.py  record_messages.py
.claude/scripts/state/: README.md  state_tool.py
.claude/skills/base-backend/: SKILL.md  backend.md
.claude/skills/base-django/: SKILL.md  architecture.md  testing.md
.claude/skills/base-docker/: SKILL.md
.claude/skills/base-docker/structures/: application.md  function.md  script.md  tool.md
.claude/skills/base-frontend/: SKILL.md  frontend-rich.md  frontend-styles.md  frontend.md
.claude/skills/base-markdown/: SKILL.md
.claude/skills/base-orchestration/: SKILL.md
.claude/skills/base-python/: SKILL.md
.claude/skills/base-python/managers/: uv.md
.claude/skills/base-python/styles/: pytorch.md  standard.md  testing.md
.claude/skills/code-quick/: SKILL.md
.claude/skills/code-tdd/: SKILL.md
.claude/skills/define-reqs/: SKILL.md
.claude/skills/design-spec/: SKILL.md
.claude/skills/explore-proj/: SKILL.md
.claude/skills/flow-plan/: SKILL.md  template.md
.claude/skills/flow-req/: SKILL.md  template.md
.claude/skills/flow-review/: SKILL.md  template.md
.claude/skills/flow-spec/: SKILL.md  template.md
.claude/skills/flow-tdd/: SKILL.md  template.md
.claude/skills/operate-sqlite/: SKILL.md  state_dao.py  test_state_dao.py
.claude/skills/plan-tasks/: SKILL.md
.claude/skills/refine-task/: SKILL.md
.claude/skills/research-topic/: SKILL.md
.claude/skills/review-code/: SKILL.md
.claude/skills/review-quick/: SKILL.md
.claude/skills/tool-add-claude-agent/: SKILL.md  template.md
.claude/skills/tool-add-command/: SKILL.md  template.md
.claude/skills/tool-add-copilot-agent/: SKILL.md  template.md
.claude/skills/tool-add-skill/: SKILL.md  template.md
.claude/skills/tool-research/: SKILL.md  template.md
.claude/skills/troubleshoot/: SKILL.md
.claude/skills/verify-work/: SKILL.md
.claude/skills/write-architecture/: SKILL.md  template.md
.claude/skills/write-plan/: SKILL.md  template.md
.claude/skills/write-reqs/: SKILL.md  template.md
.claude/skills/write-research/: SKILL.md  template.md
.claude/skills/write-spec/: SKILL.md  template.md
.claude/skills/write-summary/: SKILL.md  template.md
.claude/skills/write-task/: SKILL.md  template.md
.claude/skills/write-troubleshooting/: SKILL.md  template.md
.claude/skills/write-verification/: SKILL.md  template.md
.github/: copilot-instructions.md
.github/agents/: coder.agent.md  researcher.agent.md  reviewer.agent.md
.github/hooks/: hooks.json
.github/instructions/: markdown.instructions.md  python.instructions.md
src/gomoku/: __init__.py  __main__.py  board.py  constants.py  game.py  players.py
tests/gomoku/: test_board.py  test_constants.py  test_game.py  test_players.py
