[project]
name = "claude-code-small"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tzdata>=2026.2",
]

[dependency-groups]
dev = [
    "mdformat",
    "mdformat-gfm",
    "mdformat-frontmatter",
    "pymarkdownlnt",
    "ruff",
    "pytest",
    "pytest-cov"
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
# RUF001-003: 日本語 UI 文字列・コメントの全角記号を誤検出するため除外する
ignore = ["D203", "D213", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004", "PT011"]
"src/**" = ["ARG002"]
# .claude 配下は内部ツール用スクリプト。CLI 出力・例外文言・非パッケージ構成を許容する
".claude/scripts/**" = ["T201", "TRY003", "EM101", "EM102", "INP001", "DTZ011", "PERF401"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
